tests/chainsaw/_steps-templates/cluster-policy-ready.yaml
# DO NOT EDIT. Generated with:
#
#    devctl
#
#    https://github.com/giantswarm/devctl/blob/d0c8f03c86ad4cfaef54d2315dc6f6d402be716d/pkg/gen/input/makefile/internal/file/chainsaw-tests-steps-template.yaml.template
#

# This is a reusable policy template that will be called from the cluster-policy-ready test.

apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: cluster-policy-ready
spec:
  try:
  - assert:
      template: true
      resource:
        apiVersion: kyverno.io/v1
        kind: ClusterPolicy
        metadata:
          name: ($name)
        status:
          conditions:
          - reason: Succeeded
            status: "True"
            type: Ready
