tests/chainsaw/_steps-templates/validating-policy-ready.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: validating-policy-ready
spec:
  try:
  - assert:
      template: true
      resource:
        apiVersion: policies.kyverno.io/v1beta1
        kind: ValidatingPolicy
        metadata:
          name: ($name)
        status:
          conditionStatus:
            ready: true
